--- a/package.json
+++ b/package.json
@@ -1,6 +1,33 @@
 {
+  "name": "mzellelilas",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "vite",
+    "build": "vite build"
+  },
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.13",
-    "tailwindcss": "^4.0.13"
+    "@tailwindcss/postcss": "^4.1.4",
+    "@vitejs/plugin-react": "^4.4.1",
+    "classnames": "^2.5.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.5.2",
+    "tailwindcss": "^4.1.4",
+    "vite": "^6.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.5.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version"
+    ]
   }
 }
