--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://MzelleLilas.github.io/",
   "name": "mzellelilas",
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "vite",
     "build": "vite build"
   },
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3"
   },
   "browserslist": {
