--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MzelleLilas.github.io/",
+  "homepage": "https://MzelleLilas.github.io/MzelleLilas",
   "name": "mzellelilas",
   "version": "1.0.0",
   "private": true,
